--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -9,7 +9,7 @@
       content="default-src 'self'; style-src 'self' 'unsafe-inline'; connect-src 'self' http://localhost:5000; frame-src 'self' https://sinalpublico.com;"
     />
 
-    <title>Vite + React</title>
+    <title>Cinexus</title>
   </head>
   <body>
     <div id="root"></div>
